feat: show fast download quota
